force-app/main/default/objects/CaseConfiguration__c/CaseConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Case Configuration</label>
</CustomObject>