force-app/main/default/objects/CaseConfiguration__c/fields/CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>CaseOrigin__c</fullName>
    <label>CaseOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>