force-app/main/default/objects/CaseConfiguration__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>