force-app/main/default/objects/CaseConfiguration__c/fields/MainCategory__c.field-meta.xml
<CustomField>
    <fullName>MainCategory__c</fullName>
    <label>MainCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>