force-app/main/default/objects/CaseConfiguration__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>