force-app/main/default/objects/CaseConfiguration__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>